appId: io.sentry.uitest.android.critical
name: App Start Tests
---
# Test 1: A fresh start is considered a cold start
- launchApp:
    stopApp: false
- assertVisible: "Welcome!"
- assertVisible: "App Start Type: COLD"

# Test 2: Background/foreground transition (WARM start)
- launchApp:
    stopApp: false
- assertVisible: "Welcome!"
- tapOn: "Finish Activity"
- launchApp:
    stopApp: false
- assertVisible: "App Start Type: WARM"

# Test 3: Notification (WARM start)
- launchApp:
    stopApp: true
    permissions:
      all: allow
- assertVisible: "Welcome!"
- tapOn: "Trigger Notification"
- tapOn: "Finish Activity"
- assertNotVisible: "Welcome!"
- waitForAnimationToEnd
- repeat:
    times: 3
    while:
      notVisible: "Sentry Test Notification"
    commands:
      - swipe:
          start: 90%, 0%
          end: 90%, 100%
          duration: 4000
- tapOn: "Sentry Test Notification"
- assertVisible: "App Start Type: WARM"

# Test 4: Notification (COLD start)
- launchApp:
    stopApp: true
    permissions:
      all: allow
- assertVisible: "Welcome!"
- tapOn: "Trigger Notification"
- tapOn: "Finish Activity"
- assertNotVisible: "Welcome!"
- killApp
- waitForAnimationToEnd
- repeat:
    times: 3
    while:
      notVisible: "Sentry Test Notification"
    commands:
      - swipe:
          start: 90%, 0%
          end: 90%, 100%
          duration: 4000
- tapOn: "Sentry Test Notification"
- assertVisible: "App Start Type: COLD"
# Test 5: Launch app after a broadcast receiver already created the application
# Uncomment once https://github.com/mobile-dev-inc/Maestro/pull/2925 is merged
# - killApp
# - sendBroadcast:
#     action: io.sentry.uitest.android.critical.ACTION
#     receiver: io.sentry.uitest.android.critical/.EmptyBroadcastReceiver
# - launchApp:
#     stopApp: false
# - assertVisible: "App Start Type: WARM"
